# boggle-vision

./: .gitignore  CLAUDE.md  README.md  bunfig.toml  justfile  package-lock.json  package.json  requirements.txt  sst.config.ts  tsconfig.json  utils.py
.claude/agents/: dev.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-ui.yml  deploy-webapp.yml
apps/www/: package.json
boggle-vision-app/: docker-compose.yml
boggle-vision-app/boggle-vision-api/: Dockerfile  README.md  requirements.txt
boggle-vision-app/boggle-vision-ui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
boggle-vision-prototyping/: requirements.txt
boggle-vision-prototyping/notebooks/: 01. Detecting a Boggle Board.ipynb  02. Better Board Detection.ipynb  03. Finalizing Board Detection.ipynb  04. Creating Training Data.ipynb  06. Testing Board Detection.ipynb  (+7 more)
notebooks/: 01. Detecting a Boggle Board.ipynb  02. Better Board Detection.ipynb  03. Finalizing Board Detection.ipynb  04. Creating Training Data.ipynb  04. Testing Board Detection.ipynb  05. Creating Training Data.ipynb  05. Training a Letter Detection CNN.ipynb  06. Testing Board Detection.ipynb  06. Training a Letter Detection CNN.ipynb  07. Solving a Boggle Board.ipynb  09. Generating Visual Filters.ipynb
prototyping/: .gitignore  pyproject.toml
prototyping/legacy/: cnn.py  misc.py
prototyping/notebooks/: 01-bootstrap-and-synthesize.ipynb  02-train-and-evaluate.ipynb  03-evaluate-baseline.ipynb  04-full-pipeline-prototype.ipynb  README.md
utils/: board_detection.py  cnn.py  misc.py  settings.py
(+68 files in other folders)
